# Hitsuji

./: .hgignore  CMakeLists.txt  generate.sh  readme.txt  schema.xml  version.rc.in  version_generator.py.in
Config/: Hitsuji.json  Hitsuji.xml  symbolmap.txt
include/sbe/hitsuji/: BooleanType.hpp  Flags.hpp  GroupSizeEncoding.hpp  MessageHeader.hpp  Reply.hpp  Request.hpp  VarDataEncoding.hpp
include/upa/: upa.h
mibs/: Hitsuji-MIB-00.txt  readme.txt
src/: client.cc  client.hh  config.cc  config.hh  deleter.hh  hitsuji.cc  hitsuji.hh  main.cc  permdata.cc  permdata.hh  plugin.cc  provider.cc  provider.hh  provider.proto  rounding.hh  upa.cc  upa.hh  upaostream.hh  version.hh  vta.hh  vta_bar.cc  vta_bar.hh  vta_close.cc  vta_close.hh  vta_rollup_bar.cc  vta_rollup_bar.hh  vta_test.cc  vta_test.hh  worker.cc  worker.hh
src/accumulators/: first.hh  last.hh
src/chrome/common/: json_schema_constants.cc  json_schema_constants.hh  json_schema_validator.cc  json_schema_validator.hh
src/chromium/: file_util.hh  shared_memory.hh  shared_memory_win.cc  values.cc  values.hh
src/chromium/files/: important_file_writer.cc  important_file_writer.hh
src/chromium/json/: json_writer.cc  json_writer.hh  string_escape.cc
src/chromium/memory/: mru_cache.hh
src/chromium/metrics/: histogram.cc  histogram.hh  stats_counters.cc  stats_counters.hh  stats_table.cc  stats_table.hh
src/microsoft/: timer.hh
